projects/ctms/logic-service/k8s-config/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logic
  name: logic-svc
  namespace: ctms-prod
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: logic
